# Online_classes

./: .dockerignore  .env.template  .flake8  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
config/: settings.py  urls.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators — копия.py  validators.py  views — копия.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py  0004_course_last_updated.py
users/: models.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_moderators_group.py  create_payments.py  csu.py
users/migrations/: 0001_initial.py  0002_user_city.py  0003_payment.py  0004_alter_user_managers_user_date_joined_user_first_name_and_more.py  0005_alter_user_managers_remove_user_date_joined_and_more.py  0006_user_groups_user_user_permissions_and_more.py  0007_payment_status_payment_stripe_payment_url_and_more.py  0008_alter_user_last_login.py
