[tool.poetry]
name = "onlineclasses"
version = "0.1.0"
description = "Online classes project"
authors = ["Stas Chernyi <itsmeprivet@mail.ru>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
Django = "^4.2"
djangorestframework = "^3.15"
psycopg2-binary = "^2.9"
python-dotenv = "^1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0"
isort = "^5.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"